WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233262
[LFC][IFC] Do not apply the "do not trim whitespace followed by br" legacy line layout quirk when computing the intrinsic widths
https://bugs.webkit.org/show_bug.cgi?id=233262
Summary
[LFC][IFC] Do not apply the "do not trim whitespace followed by br" legacy li...
alan
Reported
2021-11-17 10:34:21 PST
ssia
Attachments
Patch
(5.69 KB, patch)
2021-11-17 10:38 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-11-17 10:38:06 PST
Created
attachment 444535
[details]
Patch
EWS
Comment 2
2021-11-17 12:16:52 PST
Committed
r285948
(
244350@main
): <
https://commits.webkit.org/244350@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444535
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-17 12:17:26 PST
<
rdar://problem/85515652
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug