[LFC][IFC] Do not apply the "do not trim whitespace followed by br" legacy line layout quirk when computing the intrinsic widths https://bugs.webkit.org/show_bug.cgi?id=233262

Reviewed by Antti Koivisto.

While legacy line layout applies this quirk at line layout, the preferred width computation (totally different) codepath omits this quirk.

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::removeTrailingTrimmableContent):
* layout/formattingContexts/inline/InlineLine.h:
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):



Canonical link: https://commits.webkit.org/244350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285948 268f45cc-cd09-0410-ab3c-d52691b4dbfc