Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp
@@ -34,6 +34,7 @@
 #include "LayoutBox.h"
 #include "LayoutBoxGeometry.h"
 #include "LayoutState.h"
+#include "RuntimeEnabledFeatures.h"
 #include "TextUtil.h"
 #include <wtf/unicode/CharacterNames.h>
 
@@ -457,8 +458,16 @@ LineBuilder::InlineItemRange LineBuilder::close(const InlineItemRange& needsLayo
         return lineRange;
     }
     auto horizontalAvailableSpace = m_lineLogicalRect.width();
-    m_line.removeTrailingTrimmableContent();
-    if (isInIntrinsicWidthMode()) {
+    auto isInIntrinsicWidthMode = this->isInIntrinsicWidthMode();
+    // Legacy line layout quirk: keep the trailing whitespace around when it is followed by a line break, unless the content overflows the line.
+    // This quirk however should not be applied when running intrinsic width computation.
+    // FIXME: webkit.org/b/233261
+    auto shouldApplyTrailingWhiteSpaceFollowedByBRQuirk = isInIntrinsicWidthMode || !RuntimeEnabledFeatures::sharedFeatures().layoutFormattingContextIntegrationEnabled()
+        ? Line::ShouldApplyTrailingWhiteSpaceFollowedByBRQuirk::No
+        : Line::ShouldApplyTrailingWhiteSpaceFollowedByBRQuirk::Yes;
+    m_line.removeTrailingTrimmableContent(shouldApplyTrailingWhiteSpaceFollowedByBRQuirk);
+
+    if (isInIntrinsicWidthMode) {
         // When a glyph at the start or end edge of a line hangs, it is not considered when measuring the line’s contents for fit.
         // https://drafts.csswg.org/css-text/#hanging
         // FIXME: Add support for conditionally hanging glyphs.
